--- a/fetch.html
+++ b/fetch.html
@@ -30,30 +30,25 @@
 			//block.innerHTML=employees[0].first_name
 		}
 	</script>-->
-	<section id="emp" style="display:flex;">
-		
-	</section>
+	
 	<script type="text/javascript">
-		fetch("https://reqres.in/api/users/2")
+		fetch("https://reqres.in/api/users",{
+			method:"POST",
+			headers:{
+				"Content-Type":"application/json"
+			},
+			body:JSON.stringify({nam:"shiva",age:3,gender:"male"})
+		})
 		.then((res)=>{
 			console.log(res)
+			if(res.status===201){
+				alert("data storing successfully")
+			}
 			return res.json()
 		})
-		.then((jsonResponse)=>{
-			//console.log(jsonResponse)
-			display(jsonResponse.data)
+		.then((update)=>{
+			console.log(update)
 		})
-		function display(employees){
-			var block=document.getElementById("emp")
-			for(i=0;i<employees.length;i++){
-				block.innerHTML+=
-				`<div>
-				<p>${employees[i].first_name}</p>
-				<img src="${employees[i].avatar}" width="55%"/>
-				</div>`
-			}
-			//block.innerHTML=employees[0].first_name
-		}
 	</script>
 </body>
 </html>
